# oscp-geopose-protocol

./: .gitignore  LICENSE  README.md  protocolv1.md
cpp/: .gitignore  README.md  build-dependencies.cmd  build-dependencies.sh  build-openssl-windows.txt  build-oscp-gpp-demo.cmd  build-oscp-gpp-demo.sh  build-oscp-gpp.cmd  build-oscp-gpp.sh  run-oscp-gpp-client.cmd  run-oscp-gpp-client.sh  run-oscp-gpp-server.cmd  run-oscp-gpp-server.sh
cpp/oscp-gpp/: CMakeLists.txt
cpp/oscp-gpp-demo/: CMakeLists.txt  main_client.cpp  main_server.cpp
cpp/oscp-gpp/include/oscp-gpp/: base64.h  geopose.h  geopose_json.h  geopose_utils.h  geoposeprotocol.h  geoposeprotocol_json.h
cpp/oscp-gpp/src/: base64.cpp  geopose_json.cpp  geoposeprotocol_json.cpp
data/: seattle_camera_params.json  seattle_geolocation_params.json  seattle_vps.json
demo_ac/: README.md  oscp_demo_client.py  oscp_demo_client_noSSD.py  requirements.txt  settings.ini
python/: README.md  demo_client.py  demo_server.py  run-oscp-gpp-client.cmd  run-oscp-gpp-client.sh  run-oscp-gpp-server.cmd  run-oscp-gpp-server.sh
python/oscp/: geopose.py  geopose_utils.py  geoposeprotocol.py
